# stlouisfed-fred-web-proxy

./: .gitignore  Cargo.toml  README.md
src/: date_formats.rs  entities.rs  fred.rs  lib.rs  local_cache.rs  main.rs
