[package]
name = "stlouisfed-fred-web-proxy"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Zelly Snyder <z@libhack.so>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
tower-http = { version = "0.4.4", features = ["cors", "compression-gzip"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "chrono" ] }
clap = { version = "4.4.3", features = ["derive", "env"] }
